--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,4 @@ jobs:
             composer install --prefer-dist --no-interaction --no-progress
 
     - name: Run tests
-      run: php vendor/bin/phpunit
+      run: vendor/bin/phpunit
